--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,21 @@
         window.scrollTo(0, document.body.scrollHeight);
         socket.auth.serverOffset = serverOffset;
     });
+
+
+    // fetch('http://localhost:3001/auth/signup', {
+    //     method: 'POST',
+    //     headers: {
+    //         'Content-Type': 'application/json;charset=utf-8'
+    //     },
+    //     body: JSON.stringify({
+    //         username: 'loh',
+    //         password: 'hoho',
+    //         email: 'ololsdf@yandex.ru',
+    //         nane: 'griboed',
+    //     }),
+    // }).then(res => console.log(res))
+
 </script>
 </body>
 </html>
