--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,34 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Socket.IO chat</title>
     <style>
-        body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+        body { margin: 0 auto; max-width: 1440px; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
 
         #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
         #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
         #input:focus { outline: none; }
         #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
 
-        #messages { list-style-type: none; margin: 0; padding: 0; }
+        #messages { list-style-type: none; margin: 0; padding: 0; display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr;}
         #messages > li { padding: 0.5rem 1rem; }
         #messages > li:nth-child(odd) { background: #efefef; }
+        form{
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
-<ul id="messages"></ul>
+
+<form id="login_form" action="">
+    <h2>Login form</h2>
+    <input type="text" name="username" placeholder="Логин">
+    <input type="text" name="password" placeholder="Пароль">
+    <input type="submit" value="login">
+    <div class="result_block"></div>
+</form>
+
 <form id="registration_form" action="">
+    <h2>Register form</h2>
     <input placeholder="name" type="text" name="name">
 
     <input placeholder="email" type="email" name="email">
@@ -28,10 +41,16 @@
     <input placeholder="password" type="password" name="password">
 
     <input type="submit" value="send">
-    <div id="result_block"></div>
+    <div class="result_block"></div>
 </form>
+<ul id="messages"></ul>
 <form id="form" action="">
     <input id="input" autocomplete="off" /><button>Send</button>
+</form>
+
+<form id="get_users" action="">
+    <input type="submit" value="get users">
+    <div class="result_block"></div>
 </form>
 
 
@@ -69,7 +88,7 @@
     document.querySelector('#registration_form').addEventListener('submit', function(e){
         e.preventDefault();
         const formData = new FormData(this);
-        const resultBlock = this.querySelector('#result_block');
+        const resultBlock = this.querySelector('.result_block');
         resultBlock.textContent = 'Loading...';
         fetch('http://localhost:3001/auth/signup', {
             method: 'POST',
@@ -82,6 +101,43 @@
                 email: formData.get('email'),
                 password: formData.get('password'),
             }),
+        }).then(res => res.json()).then(res => {
+            resultBlock.textContent = res.message;
+        })
+
+    })
+
+    document.querySelector('#login_form').addEventListener('submit', function(e){
+        e.preventDefault();
+        const formData = new FormData(this);
+        const resultBlock = this.querySelector('.result_block');
+        resultBlock.textContent = 'Loading...';
+        fetch('http://localhost:3001/auth/login', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json;charset=utf-8',
+            },
+            body: JSON.stringify({
+                username: formData.get('username'),
+                password: formData.get('password'),
+            }),
+        }).then(res => res.json()).then(res => {
+            resultBlock.textContent = res.message;
+        })
+
+    })
+
+    document.querySelector('#get_users').addEventListener('click', function(e){
+        e.preventDefault();
+        const resultBlock = this.querySelector('.result_block');
+        resultBlock.textContent = 'Loading...';
+        fetch('http://localhost:3001/auth/users', {
+            method: 'GET',
+            headers: {
+                'authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjAsImlhdCI6MTY5ODA1Njg2MSwiZXhwIjoxNjk4MTQzMjYxfQ.hJWRB1c5gi5N0uRViBc9_upOvXiUaP6_N6O-B5yApeA',
+                'Content-Type': 'application/json;charset=utf-8',
+            },
+
         }).then(res => res.json()).then(res => {
             resultBlock.textContent = res.message;
         })
