--- a/src/index.html
+++ b/src/index.html
@@ -131,17 +131,15 @@
         e.preventDefault();
         const resultBlock = this.querySelector('.result_block');
         resultBlock.textContent = 'Loading...';
-        fetch('http://localhost:3001/auth/users', {
+        fetch('http://localhost:3001/auth/user/10', {
             method: 'GET',
             headers: {
-                'authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjAsImlhdCI6MTY5ODA1Njg2MSwiZXhwIjoxNjk4MTQzMjYxfQ.hJWRB1c5gi5N0uRViBc9_upOvXiUaP6_N6O-B5yApeA',
+                'authorization': 'Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MjAsImlhdCI6MTY5ODQ3MzUxOSwiZXhwIjoxNjk4NTU5OTE5fQ.qxV_VzGippVJC4og4YMhSG2LfV1j9YUzxUKMHEz2OtQ',
                 'Content-Type': 'application/json;charset=utf-8',
             },
-
         }).then(res => res.json()).then(res => {
             resultBlock.textContent = res.message;
         })
-
     })
 
 </script>
