--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,8 @@
             //socket.emit('chat message', input.value);
             socket.emit('game:join',
                 {
-                    playerId: 1,
-                    gameId: 1
+                    playerId: 4,
+                    gameId: 3,
                 }
             );
             input.value = '';
